--- a/css/style.css
+++ b/css/style.css
@@ -1222,6 +1222,7 @@ form label {
 #fh5co-event,
 #fh5co-couple-story,
 #fh5co-couple,
+#fh5co-couple2,
 #fh5co-gallery,
 .fh5co-section {
     padding: 5em 0;
@@ -1242,6 +1243,7 @@ form label {
     #fh5co-event,
     #fh5co-couple-story,
     #fh5co-couple,
+    #fh5co-couple2,
     #fh5co-gallery,
     .fh5co-section {
         padding: 3em 0;
