--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: 'icomoon';
     src: url("../fonts/icomoon/icomoon.eot?srf3rx");
@@ -6,6 +5,8 @@
     font-weight: normal;
     font-style: normal;
 }
+
+
 /* =======================================================
 *
 * 	Template Style 
@@ -127,6 +128,8 @@ figure {
         width: 120px
     }
 }
+
+
 /* #page a .js-fh5co-nav-toggle i{
 position: fixed;
 z-index: -1;
@@ -420,6 +423,7 @@ background-position:center; */
 .topic-3 {
     color: #E1761C !important;
 }
+
 
 /* .item {
     color: rgb(122, 120, 120);
@@ -2282,6 +2286,8 @@ html {
     background: rgba(209, 68, 68, 0.7);
     box-shadow: 0 3px 7px rgba(0, 0, 0, 0.1);
 }
+
+
 /* Nav Menu Essentials */
 
 .nav-menu,
@@ -2321,6 +2327,8 @@ html {
 .nav-menu ul li {
     min-width: 180px;
 }
+
+
 /* Nav Menu Arrows */
 
 .sf-arrows .sf-with-ul {
@@ -2340,6 +2348,8 @@ html {
 .sf-arrows ul .sf-with-ul:after {
     content: "\f105";
 }
+
+
 /* Nav Meu Container */
 
 #nav-menu-container {
@@ -2352,6 +2362,8 @@ html {
         display: none;
     }
 }
+
+
 /* Nav Meu Styling */
 
 .nav-menu a {
@@ -2404,6 +2416,8 @@ html {
 .nav-menu ul ul {
     margin: 0;
 }
+
+
 /* Mobile Nav Toggle */
 
 #mobile-nav-toggle {
@@ -2431,6 +2445,8 @@ html {
         display: inline;
     }
 }
+
+
 /* Mobile Nav Styling */
 
 #mobile-nav {
@@ -2504,6 +2520,8 @@ html {
     background: rgba(52, 59, 64, 0.9);
     display: none;
 }
+
+
 /* Mobile Nav body classes */
 
 body.mobile-nav-active {
@@ -2577,4 +2595,20 @@ body.mobile-nav-active #mobile-nav-toggle i {
     background-color: #2980b9;
     color: white;
     transform: rotateY(180deg);
+}
+
+@media (max-width:468px) {
+    .time-frame {
+        width: 100px !important;
+        height: 100px;
+        margin-left: -210px !important;
+    }
+}
+
+@media (max-width:768px) {
+    .time-frame {
+        width: 100px !important;
+        height: 100px;
+        margin-left: 300px;
+    }
 }
